syntax = "proto3";

// Service for Lease Managers to communicate between them
import "protos/lease_sheet_definitions.proto";

message AcceptRequest {
  float write_timestamp = 1;
  LeaseList val = 2;
}

message Accepted { bool accepted = 1; }

message PrepareRequest { float read_timestamp = 1; }

message Promise {
  float read_timestamp = 1;
  LeaseList val = 2;
}

service PaxosCommunicationService {
  rpc SendAccept(AcceptRequest) returns (Accepted);
  rpc SendPrepare(PrepareRequest) returns (Promise);
}
