syntax = "proto3";

import "protos/lease_sheet_definitions.proto";

// Service for Lease Managers to communicate with TM

message ReceiveLeaseRequest { Lease lease = 1; }

message ReceiveLeaseResponse {}

message ReceiveLeaseListRequest {
  LeaseList leaseList = 1;
  int32 requestId = 2;
}

message ReceiveLeaseListResponse {}

service LMTMCommunicationService {
  rpc ReceiveLease(ReceiveLeaseRequest) returns (ReceiveLeaseResponse);
  rpc ReceiveLeaseList(ReceiveLeaseListRequest)
      returns (ReceiveLeaseListResponse);
}
